Aggiunto nel gitignore il file contenente le impostazioni locali (come quelle del database)

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,6 @@ cython_debug/
 # File che servono a esaedro
 shell.nix
 .envrc
+
+# File che riguardano impostazioni locali (come quelle del database)
+progettoiseo/progettoiseo/settings.py
