Aggiunte le immagini per gli articoli di prova
Ho modificato anche settings.py per impostare un percorso di default per
i media, quindi ricordatevi di reinserire le vostre credenziali per il
database.

--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,4 @@ shell.nix
 .envrc
 
 # File che riguardano impostazioni locali (come quelle del database)
-progettoiseo/progettoiseo/settings.py
+# progettoiseo/progettoiseo/settings.py
