--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ devbox.lock
 
 # File che riguardano impostazioni locali (come quelle del database)
 progettoiseo/progettoiseo/settings.py
+progettoiseo/progettoiseo/settings.py
